--- a/src/app/transmitter-detail/transmitter-detail.component.html
+++ b/src/app/transmitter-detail/transmitter-detail.component.html
@@ -7,5 +7,7 @@
       <input [(ngModel)]="transmitter.nickname" placeholder="nickname">
     </label>
   </div>
+
+  <button (click)="goBack()">go back</button>
   
 </div>
