--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
 <h1>{{title}}</h1>
-<app-transmitters></app-transmitters>
+<nav>
+  <a routerLink="/transmitters">Transmitters</a>
+</nav>
+<router-outlet></router-outlet>
 <app-messages></app-messages>
