--- a/src/app/transmitters/transmitters.component.html
+++ b/src/app/transmitters/transmitters.component.html
@@ -1,11 +1,9 @@
 <h2>My Transmitters</h2>
 
 <ul class="transmitters">
-  <li *ngFor="let transmitter of transmitters"
-    [class.selected]="transmitter === selectedTransmitter"
-    (click)="onSelect(transmitter)">
-    <span class="badge">{{transmitter.id}}</span> {{transmitter.nickname}}
+  <li *ngFor="let transmitter of transmitters">
+    <a routerLink="/detail/{{transmitter.id}}">
+      <span class="badge">{{transmitter.id}}</span> {{transmitter.nickname}}
+    </a>
   </li>
 </ul>
-
-<app-transmitter-detail [transmitter]="selectedTransmitter"></app-transmitter-detail>
