--- a/src/app/transmitters/transmitters.component.html
+++ b/src/app/transmitters/transmitters.component.html
@@ -11,7 +11,8 @@
 <ul class="transmitters">
   <li *ngFor="let transmitter of transmitters">
     <a routerLink="/detail/{{transmitter.id}}">
-      <span class="badge">{{transmitter.id}}</span> {{transmitter.nickname}}
+      <!-- <span class="badge">{{transmitter.id}}</span> {{transmitter.nickname}} -->
+      <span class="badge">{{transmitter.id}}</span> last seen {{date | timeAgo}}
     </a>
     <button class="delete" title="delete transmitter"
       (click)="delete(transmitter)">x</button>
