--- a/src/app/transmitter-detail/transmitter-detail.component.html
+++ b/src/app/transmitter-detail/transmitter-detail.component.html
@@ -1,14 +1,42 @@
 <div *ngIf="transmitter">
 
-  <h2>{{transmitter.nickname | uppercase}} Details</h2>
-  <div><span>id: </span>{{transmitter.id}}</div>
-  <div>
-    <label>nickname:
-      <input [(ngModel)]="transmitter.nickname" placeholder="nickname">
-    </label>
-  </div>
+  <h2>{{transmitter.id}} Details</h2>
+  <!-- <div><span>id: </span>{{transmitter.id}}</div> -->
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+  <!--- Note that these columns can be defined in any order.
+        The actual rendered columns are set as a property on the row definition" -->
+
+  <!-- Position Column -->
+  <ng-container matColumnDef="position">
+    <th mat-header-cell *matHeaderCellDef> No. </th>
+    <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+  </ng-container>
+
+  <!-- Name Column -->
+  <ng-container matColumnDef="name">
+    <th mat-header-cell *matHeaderCellDef> Name </th>
+    <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+  </ng-container>
+
+  <!-- Weight Column -->
+  <ng-container matColumnDef="weight">
+    <th mat-header-cell *matHeaderCellDef> Weight </th>
+    <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+  </ng-container>
+
+  <!-- Symbol Column -->
+  <ng-container matColumnDef="symbol">
+    <th mat-header-cell *matHeaderCellDef> Symbol </th>
+    <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
+
 
   <button (click)="goBack()">go back</button>
   <button (click)="save()">save</button>
-  
+
 </div>
