--- a/src/app/transmitters/transmitters.component.html
+++ b/src/app/transmitters/transmitters.component.html
@@ -20,3 +20,36 @@
       (click)="delete(transmitter)">x</button>
   </li>
 </ul>
+
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+<!--- Note that these columns can be defined in any order.
+      The actual rendered columns are set as a property on the row definition" -->
+
+<!-- Position Column -->
+<ng-container matColumnDef="id">
+  <th mat-header-cell *matHeaderCellDef> No. </th>
+  <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+</ng-container>
+
+<!-- Name Column -->
+<ng-container matColumnDef="readDate">
+  <th mat-header-cell *matHeaderCellDef> Name </th>
+  <td mat-cell *matCellDef="let element"> {{element.readDate}} </td>
+</ng-container>
+
+<!-- Weight Column -->
+<ng-container matColumnDef="activationDate">
+  <th mat-header-cell *matHeaderCellDef> Weight </th>
+  <td mat-cell *matCellDef="let element"> {{element.activationDate}} </td>
+</ng-container>
+
+<!-- Symbol Column -->
+<ng-container matColumnDef="rssi">
+  <th mat-header-cell *matHeaderCellDef> Symbol </th>
+  <td mat-cell *matCellDef="let element"> {{element.rssi}} </td>
+</ng-container>
+
+<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+<tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
