--- a/src/app/transmitters/transmitters.component.html
+++ b/src/app/transmitters/transmitters.component.html
@@ -28,25 +28,25 @@
 
 <!-- Position Column -->
 <ng-container matColumnDef="id">
-  <th mat-header-cell *matHeaderCellDef> No. </th>
+  <th mat-header-cell *matHeaderCellDef> ID </th>
   <td mat-cell *matCellDef="let element"> {{element.id}} </td>
 </ng-container>
 
 <!-- Name Column -->
 <ng-container matColumnDef="readDate">
-  <th mat-header-cell *matHeaderCellDef> Name </th>
+  <th mat-header-cell *matHeaderCellDef> Read date </th>
   <td mat-cell *matCellDef="let element"> {{element.readDate}} </td>
 </ng-container>
 
 <!-- Weight Column -->
 <ng-container matColumnDef="activationDate">
-  <th mat-header-cell *matHeaderCellDef> Weight </th>
+  <th mat-header-cell *matHeaderCellDef> Activation date </th>
   <td mat-cell *matCellDef="let element"> {{element.activationDate}} </td>
 </ng-container>
 
 <!-- Symbol Column -->
 <ng-container matColumnDef="rssi">
-  <th mat-header-cell *matHeaderCellDef> Symbol </th>
+  <th mat-header-cell *matHeaderCellDef> RSSI (dB) </th>
   <td mat-cell *matCellDef="let element"> {{element.rssi}} </td>
 </ng-container>
 
