--- a/src/app/transmitters/transmitters.component.html
+++ b/src/app/transmitters/transmitters.component.html
@@ -35,13 +35,23 @@
 <!-- Name Column -->
 <ng-container matColumnDef="readDate">
   <th mat-header-cell *matHeaderCellDef> Read date </th>
-  <td mat-cell *matCellDef="let element"> {{element.readDate}} </td>
+  <td mat-cell *matCellDef="let element"> {{element.readDate | timeAgo}} </td>
 </ng-container>
 
 <!-- Weight Column -->
 <ng-container matColumnDef="activationDate">
   <th mat-header-cell *matHeaderCellDef> Activation date </th>
-  <td mat-cell *matCellDef="let element"> {{element.activationDate}} </td>
+  <td mat-cell *matCellDef="let element"> {{element.activationDate | timeAgo}} </td>
+</ng-container>
+
+<ng-container matColumnDef="state">
+  <th mat-header-cell *matHeaderCellDef> State </th>
+  <td mat-cell *matCellDef="let element"> {{element.state}} </td>
+</ng-container>
+
+<ng-container matColumnDef="status">
+  <th mat-header-cell *matHeaderCellDef> Status </th>
+  <td mat-cell *matCellDef="let element"> {{element.status}} </td>
 </ng-container>
 
 <!-- Symbol Column -->
