--- a/src/app/transmitters/transmitters.component.html
+++ b/src/app/transmitters/transmitters.component.html
@@ -69,6 +69,13 @@
   </td>
 </ng-container>
 
+<ng-container matColumnDef="delete">
+  <th mat-header-cell *matHeaderCellDef> Delete </th>
+  <td mat-cell *matCellDef="let element">
+    <button (click)="delete(element)">x</button>
+  </td>
+</ng-container>
+
 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
 <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
