--- a/src/app/transmitters/transmitters.component.html
+++ b/src/app/transmitters/transmitters.component.html
@@ -62,6 +62,21 @@
   <td mat-cell *matCellDef="let element"> {{element.rssi}} </td>
 </ng-container>
 
+<ng-container matColumnDef="batterya">
+  <th mat-header-cell *matHeaderCellDef> A (V) </th>
+  <td mat-cell *matCellDef="let element"> {{element.voltagea}} </td>
+</ng-container>
+
+<ng-container matColumnDef="batteryb">
+  <th mat-header-cell *matHeaderCellDef> B (V) </th>
+  <td mat-cell *matCellDef="let element"> {{element.voltageb}} </td>
+</ng-container>
+
+<ng-container matColumnDef="resist">
+  <th mat-header-cell *matHeaderCellDef> Resistance </th>
+  <td mat-cell *matCellDef="let element"> {{element.resist}} </td>
+</ng-container>
+
 <ng-container matColumnDef="reset">
   <th mat-header-cell *matHeaderCellDef> Reset </th>
   <td mat-cell *matCellDef="let element">
